force-app/main/default/objects/Snapshot__c/fields/account_name__c.field-meta.xml
<CustomField>
    <fullName>account_name__c</fullName>
    <label>account. name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>