force-app/main/default/objects/Snapshot__c/fields/Countries_Visited_List_FY__c.field-meta.xml
<CustomField>
    <fullName>Countries_Visited_List_FY__c</fullName>
    <label>Countries Visited List FY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>