force-app/main/default/objects/Snapshot__c/fields/Favorite_Color__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Color__c</fullName>
    <label>Favorite Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>