force-app/main/default/objects/Snapshot__c/fields/favorite_color_echo__c.field-meta.xml
<CustomField>
    <fullName>favorite_color_echo__c</fullName>
    <label>favorite color echo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>