force-app/main/default/objects/Snapshot__c/fields/First_Country_Visited__c.field-meta.xml
<CustomField>
    <fullName>First_Country_Visited__c</fullName>
    <label>First Country Visited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>