force-app/main/default/objects/Snapshot__c/fields/Last_Country_Visited__c.field-meta.xml
<CustomField>
    <fullName>Last_Country_Visited__c</fullName>
    <label>Last Country Visited</label>
    <length>255</length>
    <type>Text</type>
</CustomField>