force-app/main/default/objects/Snapshot__c/fields/Median__c.field-meta.xml
<CustomField>
    <fullName>Median__c</fullName>
    <label>Median</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>