force-app/main/default/objects/Snapshot__c/fields/Num_Countries_Visited__c.field-meta.xml
<CustomField>
    <fullName>Num_Countries_Visited__c</fullName>
    <label># Countries Visited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>