force-app/main/default/objects/Snapshot__c/fields/Num_Countries_Visited_FY__c.field-meta.xml
<CustomField>
    <fullName>Num_Countries_Visited_FY__c</fullName>
    <label># Countries Visited FY</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>