force-app/main/default/objects/Snapshot__c/fields/Num_Countries_Visited_Unique__c.field-meta.xml
<CustomField>
    <fullName>Num_Countries_Visited_Unique__c</fullName>
    <label># Countries Visited Unique</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>