force-app/main/default/objects/Snapshot__c/fields/Num_Parties_Attended__c.field-meta.xml
<CustomField>
    <fullName>Num_Parties_Attended__c</fullName>
    <label># Parties Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>