force-app/main/default/objects/Snapshot__c/fields/Num_Parties_Attended_FY__c.field-meta.xml
<CustomField>
    <fullName>Num_Parties_Attended_FY__c</fullName>
    <label># Parties Attended FY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>