force-app/main/default/objects/Snapshot__c/fields/Party_First_Drink__c.field-meta.xml
<CustomField>
    <fullName>Party_First_Drink__c</fullName>
    <label>Party - First Drink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>