force-app/main/default/objects/Snapshot__c/fields/Party_Size_Std_Dev__c.field-meta.xml
<CustomField>
    <fullName>Party_Size_Std_Dev__c</fullName>
    <label>Party Size - Std Dev</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>