force-app/main/default/objects/Snapshot__c/fields/Party_Size_Total__c.field-meta.xml
<CustomField>
    <fullName>Party_Size_Total__c</fullName>
    <label>Party Size - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>