force-app/main/default/objects/Snapshot__c/fields/Party_Size_Total_Admission__c.field-meta.xml
<CustomField>
    <fullName>Party_Size_Total_Admission__c</fullName>
    <label>Party Size - Total Admission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>